AZUREUS CHANGELOG
-----------------

2006.xx.xx | Azureus 2.4.0.1

CHANGE: UI    | Filter-as-you-type is now more visible [TuxPaper]
CHANGE: UI    | "Show In Explorer" on a Folder now opens to show what's in the folder [TuxPaper]

BUGFIX: Core  | Ensure SO_REUSEADDR is set when binding during NAT test [Nolar]
BUGFIX: Core  | Retain data from terribly slow senders [MjrTom]
BUGFIX: Plug  | Column dispose listener wasn't being called when there was no cell dispose listener [TuxPaper]
BUGFIX: UI    | Fixed window size/position not always being saved [TuxPaper]
BUGFIX: UI    | Fix default language: Use same language from diff. country when user's lang/country doesn't exist [TuxPaper]
BUGFIX: UI    | Fixed new table rows getting last graphic cell's image [TuxPaper]
BUGFIX: UI    | Column sort is now case-insensitive (again) for text columns [TuxPaper]
BUGFIX: UI    | Fix number display Seeds2Peer column (when radio is really small) [TuxPaper]
BUGFIX: UI    | Fixed Drag and Drop.  Should work in Windows and Linux. [TuxPaper]




2006.02.11 | Azureus 2.4.0.0

FEATURE: Core | Logging seperated into sections [TuxPaper]
FEATURE: Core | Plugins can be disabled from starting up [TuxPaper]
FEATURE: Core | Separate high-speed transfer rates between peers within the local LAN [Parg,Nolar]
FEATURE: Core | Encrypted peer connections [Parg,Nolar]
FEATURE: Core | Revamped and much improved piece-picking code [MjrTom]
FEATURE: Core | Option to bind outgoing connections to the same local port, may help with NAT router instability [Nolar]
FEATURE: Plug | HTTP webseed support (http://www.getright.com/seedtorrent.html) [Parg]
FEATURE: Plug | New "team seeder" plugin [Parg]
FEATURE: Dev  | Plugins can now add views/tabs to Torrent Details, Peers View, etc [TuxPaper]
FEATURE: UI   | Draggable column reordering and column indicator (w/SWT 3.2+) [TuxPaper]
FEATURE: UI   | Peer piece map in Peers Tab [TuxPaper]
FEATURE: UI   | Manual tracker scrape option if auto-scrape disabled [Parg]